# gaims_geoopt

./: .gitignore  README.md  pyproject.toml
examples/0-gfn2-xtb/: test_check_remote_status.py  test_run_locally.py  test_submit_remote.py
examples/1-aims/: test.py  test_check_remote_status.py  test_run_locally.py  test_submit_remote.py
examples/1-aims/atom_calc/H/run_1/: aims.out  control.in  exx_restart.1000  final_N_up_N_down  final_occupation  fort.1  geometry.in  restart.1  restart.1000  slurm-282.out
examples/1-aims/atom_calc/O/run_1/: aims.out  control.in  exx_restart.1000  final_N_up_N_down  fort.1  geometry.in  restart.1  restart.1000
examples/1-aims/settings/: README  atomate2.yaml  jobflow.yaml  settings_in_bashrc  yiy_workstation.yaml
examples/2-aims-pbc/: test_run_locally.py
src/gaims_geoopt/: flows.py  jobs.py  test.py
